# pillar_deformation_analysis

./: README.md  main.py  pyproject.toml  run_example_analysis.py
src/pillar_deformation_analysis/: analysis.py  main.py  pick.py  stack.py
